fix(#184): increase be coverage (#187)