@@ -12,6 +12,7 @@ import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 import io.github.resilience4j.retry.annotation.Retry;
 import io.micrometer.observation.annotation.Observed;
 import io.micrometer.tracing.annotation.NewSpan;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -30,7 +31,12 @@ import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestClient;
 
 /**
- * This class contains methods to integrate SILVA REST API with ForestClient API.
+ * Provider that integrates with the external ForestClient API.
+ *
+ * <p>Contains methods to fetch clients, locations and perform searches against
+ * the downstream ForestClient service. Resilience (retry/circuit breaker) and response handling are
+ * applied where appropriate.
+ * </p>
  */
 @Slf4j
 @Component
@@ -41,6 +47,11 @@ public class ForestClientApiProvider {
 
   private static final String PROVIDER = "ForestClient API";
 
+  /**
+   * Constructor for ForestClientApiProvider.
+   *
+   * @param forestClientApi the RestClient configured for ForestClient API
+   */
   ForestClientApiProvider(@Qualifier("forestClientApi") RestClient forestClientApi) {
     this.restClient = forestClientApi;
   }
@@ -48,8 +59,14 @@ public class ForestClientApiProvider {
   /**
    * Fetch a ForestClient by its number.
    *
+   * <p>Handles downstream response status codes mapping them to appropriate
+   * domain exceptions (404 -> {@link ForestClientNotFoundException}, 429 ->
+   * {@link TooManyRequestsException}, 4xx -> {@link UnretriableException}, 5xx ->
+   * {@link RetriableException}).
+   * </p>
+   *
    * @param number the client number to search for
-   * @return the ForestClient with client number, if one exists
+   * @return an {@link Optional} containing the {@link ForestClientDto} if found
    */
   @Retry(name = "apiRetry", fallbackMethod = "fetchClientByNumberFallBack")
   @NewSpan
@@ -96,10 +113,14 @@ public class ForestClientApiProvider {
   /**
    * Search client by name, acronym or number.
    *
-   * @param page  Pagination parameter
-   * @param size  Pagination parameter
-   * @param value the value to search for
-   * @return List of ForestClientDto
+   * <p>Returns a pageable result of {@link ForestClientDto}. The total count is
+   * read from the {@code X-Total-Count} response header.
+   * </p>
+   *
+   * @param page  pagination page
+   * @param size  pagination size
+   * @param value search value for name/acronym/number
+   * @return a {@link Page} of {@link ForestClientDto}
    */
   @CircuitBreaker(name = "breaker", fallbackMethod = "paginatedFallback")
   @NewSpan
@@ -132,30 +153,27 @@ public class ForestClientApiProvider {
             .toEntity(new ParameterizedTypeReference<>() {
             });
 
-    if (response.getStatusCode().is2xxSuccessful()) {
-      return new PageImpl<>(
-          response.getBody() != null ? response.getBody() : List.of(),
-          PageRequest.of(page, size),
-          Long.parseLong(
-              Objects.toString(
-                  response.getHeaders().getFirst(BackendConstants.X_TOTAL_COUNT),
-                  "0"
-              )
-          )
-      );
-    }
-
-    return paginatedFallback(page, size, value, new RuntimeException(
-        "Failed to fetch clients with status: " + response.getStatusCode())
+    return new PageImpl<>(
+        response.getBody() != null ? response.getBody() : List.of(),
+        PageRequest.of(page, size),
+        Long.parseLong(
+            Objects.toString(
+                response.getHeaders().getFirst(BackendConstants.X_TOTAL_COUNT),
+                "0"
+            )
+        )
     );
-
   }
 
   /**
    * Fetch all locations for a client.
    *
-   * @param clientNumber the client number to search for
-   * @return the list of ForestClientLocationDto for the client
+   * <p>Returns a pageable list of {@link ForestClientLocationDto}. On 404 the
+   * call throws {@link ForestClientNotFoundException}.
+   * </p>
+   *
+   * @param clientNumber client number to lookup
+   * @return a pageable list of locations for the client
    */
   @CircuitBreaker(name = "breaker", fallbackMethod = "paginatedFallback")
   @NewSpan
@@ -182,56 +200,27 @@ public class ForestClientApiProvider {
         .toEntity(new ParameterizedTypeReference<>() {
         });
 
-    if (response.getStatusCode().is2xxSuccessful()) {
-      return new PageImpl<>(
-          response.getBody() != null ? response.getBody() : List.of(),
-          PageRequest.of(0, 50),
-          Long.parseLong(
-              Objects.toString(
-                  response.getHeaders().getFirst(BackendConstants.X_TOTAL_COUNT),
-                  "0"
-              )
-          )
-      );
-    }
-
-    return paginatedFallback(0, 50, clientNumber, new RuntimeException(
-        "Failed to fetch client locations with status: " + response.getStatusCode())
+    return new PageImpl<>(
+        response.getBody() != null ? response.getBody() : List.of(),
+        PageRequest.of(0, 50),
+        Long.parseLong(
+            Objects.toString(
+                response.getHeaders().getFirst(BackendConstants.X_TOTAL_COUNT),
+                "0"
+            )
+        )
     );
   }
 
-
-  @CircuitBreaker(name = "breaker", fallbackMethod = "locationByClientNumberAndLocationCodeFallback")
-  @NewSpan
-  public Optional<ForestClientLocationDto> fetchLocationByClientNumberAndLocationCode(
-      String clientNumber,
-      String locationCode
-  ) {
-    log.info("Starting {} request to /clients/{}/locations/{}", PROVIDER, clientNumber,
-        locationCode);
-
-    try {
-      return
-          Optional
-              .ofNullable(
-                  restClient
-                      .get()
-                      .uri("/clients/{clientNumber}/locations/{locationCode}", clientNumber,
-                          locationCode)
-                      .retrieve()
-                      .body(ForestClientLocationDto.class)
-              );
-    } catch (HttpClientErrorException | HttpServerErrorException httpExc) {
-      log.error("Client location {} request - Response code error: {}",
-          PROVIDER,
-          httpExc.getStatusCode()
-      );
-    }
-
-    return Optional.empty();
-  }
-
-
+  /**
+   * Search clients by a list of IDs with optional name filter.
+   *
+   * @param page   Page number
+   * @param size   Number of items per page
+   * @param values List of client IDs to search
+   * @param name   Optional name filter
+   * @return List of matching ForestClientDto
+   */
   @CircuitBreaker(name = "breaker", fallbackMethod = "searchClientsByIdsFallback")
   @NewSpan
   public List<ForestClientDto> searchClientsByIds(
@@ -240,47 +229,40 @@ public class ForestClientApiProvider {
       List<String> values,
       String name
   ) {
-    try {
-      log.info("Starting {} request to /clients/search", PROVIDER);
+    log.info("Starting {} request to /clients/search", PROVIDER);
 
-      return restClient
-          .get()
-          .uri(uriBuilder ->
-              uriBuilder
-                  .path("/clients/search")
-                  .queryParam("page", page)
-                  .queryParam("size", size)
-                  .queryParams(UriUtils.buildMultiValueQueryParam("id", values))
-                  .queryParamIfPresent("name", Optional.ofNullable(name))
-                  .build(Map.of())
-          )
-          .retrieve()
-          .body(new ParameterizedTypeReference<>() {
-          });
-    } catch (HttpClientErrorException | HttpServerErrorException httpExc) {
-      log.error(
-          "{} requested on search by - Response code error: {} with body: {}",
-          PROVIDER,
-          httpExc.getStatusCode(),
-          httpExc.getResponseBodyAsString());
-    }
-
-    return List.of();
+    return restClient
+        .get()
+        .uri(uriBuilder ->
+            uriBuilder
+                .path("/clients/search")
+                .queryParam("page", page)
+                .queryParam("size", size)
+                .queryParams(UriUtils.buildMultiValueQueryParam("id", values))
+                .queryParamIfPresent("name", Optional.ofNullable(name))
+                .build(Map.of())
+        )
+        .retrieve()
+        .body(new ParameterizedTypeReference<>() {
+        });
   }
 
+  @SuppressWarnings("unused")
   private Optional<ForestClientDto> fetchClientByNumberFallBack(String number, Throwable ex) {
-    log.warn("Fallback for fetchClientByNumber for {} due to {}.", PROVIDER, ex.toString());
+    logFallbackWarn("fetchClientByNumber", ex);
     return Optional.empty();
   }
 
+  @SuppressWarnings("unused")
   private <T> Page<T> paginatedFallback(
       int page,
       int size,
       String value,
       Throwable ex
   ) {
-    log.warn("Fallback for searchClients for {} due to {}.", PROVIDER, ex.toString());
-    return new PageImpl<>(List.of(), PageRequest.of(page, size), 0);
+    logFallbackWarn("searchClients", ex);
+    List<T> empty = Collections.emptyList();
+    return new PageImpl<>(empty, PageRequest.of(page, size), 0);
   }
 
   private <T> Page<T> paginatedFallback(
@@ -290,22 +272,25 @@ public class ForestClientApiProvider {
     return paginatedFallback(0, 10, value, ex);
   }
 
-  private Optional<ForestClientLocationDto> locationByClientNumberAndLocationCodeFallback(
-      String clientNumber,
-      String locationCode,
-      Throwable ex
-  ) {
-    return Optional.empty();
-  }
-
+  @SuppressWarnings("unused")
   private List<ForestClientDto> searchClientsByIdsFallback(
       int page,
       int size,
       List<String> values,
       String name,
       Throwable ex
-  ){
-    return List.of();
+  ) {
+    logFallbackWarn("searchClientsByIds", ex);
+    return ForestClientConstants.EMPTY_FOREST_CLIENT_LIST;
+  }
+
+  // Centralized fallback logger to reduce repeated code
+  private void logFallbackWarn(String method, Throwable ex) {
+    log.warn("Fallback for {} for {} due to {}.",
+        method,
+        PROVIDER,
+        ex == null ? "unknown" : ex.toString()
+    );
   }
 
 }
